Add description info

--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
       <h3>Github</h3>
       <a href="https://github.com/ninico11">My github page: ninico11</a>
     </section>
+    <br>
+    <section>
+        <!-- Description -->
+        <h2>Description</h2>
+        <p>
+          I am Rotaru Ion, currently a student at TUM in the Software Engineering course.<br>
+          My hobbies include gaming, watching anime, and programming. Currently, I am passionate about machine learning.<br>
+          I aspire to become a Data Scientist.
+        </p>
+      </section>
   </body>
 </html>
