--- a/index.html
+++ b/index.html
@@ -31,5 +31,30 @@
           I aspire to become a Data Scientist.
         </p>
       </section>
+      <br>
+      <section>
+        <!-- Education -->
+        <h2>Education</h2>
+        <h3>University</h3>
+        <p>
+          1 September 2021 - Present<br>
+          Theoretical University of Moldova<br>
+          My favorite course was Computer Programming
+        </p>
+        <hr>
+        <h3>High school</h3>
+        <p>
+          1 September 2018 - 31 May 2021 <br>
+          Theoretical High School "Onisifor Ghibu" <br>
+          My favorite course was Informatics
+        </p>
+        <hr>
+        <h3>Gymnasium</h3>
+        <p>
+          1 September 2009 - 31 May 2018<br>
+          Pelivan Gymnasium<br>
+          My favorite course was Math 
+        </p>
+      </section>
   </body>
 </html>
