Added final information and changed some tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h3>Github</h3>
       <a href="https://github.com/ninico11">My github page: ninico11</a>
     </section>
-    <br>
+    <hr>
     <section>
         <!-- Description -->
         <h2>Description</h2>
@@ -31,7 +31,7 @@
           I aspire to become a Data Scientist.
         </p>
       </section>
-      <br>
+      <hr>
       <section>
         <!-- Education -->
         <h2>Education</h2>
@@ -41,19 +41,36 @@
           Theoretical University of Moldova<br>
           My favorite course was Computer Programming
         </p>
-        <hr>
         <h3>High school</h3>
         <p>
           1 September 2018 - 31 May 2021 <br>
           Theoretical High School "Onisifor Ghibu" <br>
           My favorite course was Informatics
         </p>
-        <hr>
         <h3>Gymnasium</h3>
         <p>
           1 September 2009 - 31 May 2018<br>
           Pelivan Gymnasium<br>
           My favorite course was Math 
+        </p>
+      </section>
+      <hr>
+      <section>
+        <!-- Projects and Technologies -->
+        <h2>Technologies</h2>
+        <p>
+          - Python <br>
+          - C++ <br>
+          - React <br>
+          - MySQL <br>
+          - Node.js <br>
+        </p>
+        <h2>Projects</h2>
+        <p>
+          <a href="https://colab.research.google.com/drive/118zhGqhpeIt6gxtySd0WUW8pRKexgxqc">Whisper Handler</a> <br>
+          <a href="https://colab.research.google.com/drive/1pK_oQcipumGHzqEEUGewHd8g2MFk0quM">The Boston Housing Dataset</a> <br>
+          <a href="https://colab.research.google.com/drive/1REVQYQfQQ0r_eP7qfposfAsIFs_QjEA9">Date Fruit Dataset</a> <br>
+          <a href="https://colab.research.google.com/drive/1VWjmL3vZXvZZ1TpISFgCMNbyY_znwdTD#scrollTo=HZ94vG5ZBzWD">Transfer Learning</a> <br>
         </p>
       </section>
   </body>
